renamed pipes.py to custom_pipes.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "96fe3aa3",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.pipeline import Pipeline\n",
-    "import pipes\n",
+    "import custom_pipes\n",
     "\n",
     "import pickle"
    ]
